--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Rock Paper Scissor</title>
+    <title> Rock Paper Scissors</title>
     <link rel="icon" href="https://cdn.dribbble.com/users/2492262/screenshots/13980145/media/1b27c8a7f34535fcf8f38166446196ad.gif">
     <link rel="stylesheet" href="styles.css">
 </head>
