--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <script src="javascript.js"></script>
+    <script src="javascript.js" defer></script>
+    <div> <h1>Scoreboard</h1></div>
+    <p>
+        <button id="rock"> Rock </button>
+        <button id="paper"> Paper </button>
+        <button id="scissors"> Scissors </button>
+    </p>
+
 </body>
 </html>
